# research-software-etl

./: .gitignore  .gitlab-ci-conda.yml  .gitlab-ci-gitlabregistry.yml  .gitlab-ci-testpypi.yml  .gitlab-ci.yml  LICENSE  Pipfile  README.html  README.md  diagram.drawio  mkdocs.yml  pytest.ini  requirements.txt
FAIRsoft/: .pypirc-gitlab  .pypirc-test  CHANGELOG.md  Pipfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
FAIRsoft/FAIRsoft/: utils.py
FAIRsoft/FAIRsoft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
FAIRsoft/FAIRsoft/classes/: publication.py  topic_operation.py
FAIRsoft/FAIRsoft/indicators_evaluation/: cli.py
FAIRsoft/FAIRsoft/integration/: config_discov.ini  config_test.ini  run_integration.py  totalNames.txt
FAIRsoft/FAIRsoft/pre_integration/: main.py
FAIRsoft/FAIRsoft/transformation/: bioconda_recipes.py  bioconductor.py  biotools_opeb.py  galaxy_config.py  galaxy_opeb.py  main.py  source_forge.py  utils.py
FAIRsoft/data/: readme.md
FAIRsoft/tests/: test_authors.py  test_data_formats.py  test_documentation.py  test_instance.py  test_integration.py  test_license.py  test_repository.py  test_topics.py  test_transformation.py
FAIRsoft/tests/transformation/: test_bioconda_opeb.py  test_bioconda_recipes.py  test_bioconductor.py  test_biotools_opeb.py  test_galaxy_config.py  test_galaxy_metadata.py  test_galaxy_opeb.py  test_repository_transformer.py  test_source.py  test_sourceforge.py  test_tools_generator.py
data/: README.md  conflict_detection.py  disambiguate_oi.py  disambiguation.py  names.txt  (+7 more)
(+285 files in other folders)
