[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FAIRsoft"
version = "0.2.1"
authors = [
  { name="Eva Martin del Pico", email="eva.martin@bsc.es" },
]
description = "FAIRsoft package for the aggregation of Life Sciences software metadata and FAIR evaluation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3"
]
dependencies = [
    "bidict",
    "munch",
    "pymongo",
    "requests",
    "simplejson",
    "pydantic",
    "pydantic-extra-types",
    "pydantic-settings",
    "pydantic_core",
    "email-validator",
    "bibtexparser"]

[project.urls]
"Bug Tracker" = "https://gitlab.bsc.es/inb/elixir/software-observatory/FAIRsoft_ETL/issues"
"Repository" = "https://gitlab.bsc.es/inb/elixir/software-observatory/FAIRsoft_ETL/-/tree/master/FAIRsoft" 

[project.scripts]
FAIRsoft_transform = "FAIRsoft.transformation.cli:main"
FAIRsoft_integrate = "FAIRsoft.integration.cli:main"
FAIRsoft_evaluate = "FAIRsoft.indicators_evaluation.cli:main"
